# CLI-Wikia

./: README.md  pyproject.toml
src/cli_wikia/: __init__.py  cli.py  hooks.py  schedule.py
src/cli_wikia/wikis/antigravity/: README.md  agentic-model.md  cli-reference.md  cli-vs-api.md  configuration.md  customization.md  hooks.md  ide-and-app.md  mcp.md  models.md  overview.md  permissions.md  plugins.md  projects-sessions-conversations.md  sandbox.md  sdk.md
src/cli_wikia/wikis/chatgpt/: README.md  cli-reference.md  cli-vs-api.md  codex-agents-md.md  codex-approvals-sandbox.md  codex-auth.md  codex-cli-reference.md  codex-cli.md  codex-config.md  codex-exec.md  codex-mcp.md  codex-models.md  codex-overview.md  codex-slash-commands.md  configuration.md  models.md
src/cli_wikia/wikis/claude/: README.md  advisor.md  agent-teams.md  agents.md  channels.md  claude-code-web.md  cli-reference.md  cli-vs-api.md  environment-variables.md  headless-sdk.md  hooks.md  ide-integrations.md  marketplaces.md  mcp.md  memory.md  models.md  monitors.md  output-styles.md  permission-modes.md  permissions.md  plugins.md  remote-control.md  sandboxing.md  settings.md  skills.md  slash-commands.md  stacking.md  statusline.md
src/cli_wikia/wikis/copilot/: README.md  billing.md  cli-reference.md  cli-vs-api.md  configuration.md  custom-agents.md  custom-instructions.md  environment-variables.md  getting-started.md  hooks.md  logging.md  mcp.md  models.md  modes.md  monitoring.md  permissions.md  plugins.md  providers-byok.md  sessions.md  skills.md  slash-commands.md
(+39 files in other folders)
